crates/analyzer/tests/snapshots/errors__self_not_first.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `self` is not the first parameter
  ┌─ compile_errors/self_not_first.fe:2:28
  │
2 │     pub fn bar(my_num: u8, self) {}
  │                            ^^^^ `self` may only be used as the first parameter


